<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="confirm_password_placeholder">Confirm Password</string>

    <string name="shared_preference_key">SHARED_DATA</string>

    <string name="btnLogin_text">LOGIN</string>
    <string name="btnLogin_loading_text">Logging In...</string>
    <string name="extra_btnLogin_text">Already have account? Login Now!</string>
    <string name="btnSignUp_text">SIGN UP</string>
    <string name="btnSignUp_loading_text">Signing UP...</string>
    <string name="extra_btnSignUp_text">Don\'t have account? Sign Up Now!</string>

    <string name="title_activity_user_dashboard">UserDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_logout">Logout</string>

    <string name="menu_expenses">Expenses</string>
    <string name="menu_incomes">Incomes</string>
    <string name="menu_statements">Statements</string>
    <string name="add_new_expense_title">Add New Expense</string>
    <string name="add_new_income_title">Add New Income</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
